# web-crawler-mcp-server

./: LICENSE  README.md  pyproject.toml  requirements.txt  test_crawler.py
src/web_crawler_mcp/: server.py  tools.py
